--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,24 @@
 body {
-    background-color: pink;
+    background-color: lightgray;
+    text-align: center;
 }
 
 button {
-    background-color: white;
+    background-color: cornflowerblue;
+    border-radius: 6px;
+    margin: 6px;
 }
 
+#add-comedian {
+    border-radius: 6px;
+    background-color: white;
+    margin: 20px;
+}
+
+#new-buttons {
+    padding-bottom: 25px;
+}
+
+#new-comedian {
+    margin-top: 20px;
+}
