--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,17 @@
 body {
-    background-color: lightgray;
+    background-color: black;
     text-align: center;
+    color: white;
 }
 
 button {
-    background-color: cornflowerblue;
+    background-color: lightgray;
     border-radius: 6px;
     margin: 6px;
+}
+
+img {
+    border: 3px solid lightgray;
 }
 
 #add-comedian {
